// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository/update/branch/get-updated getUpdatedPackageFiles() bumps versions in autoReplace managers 1`] = `
{
  "artifactErrors": [],
  "reuseExistingBranch": undefined,
  "updatedArtifacts": [],
  "updatedPackageFiles": [
    {
      "contents": "version: 0.0.2",
      "path": "Chart.yaml",
      "type": "addition",
    },
  ],
}
`;

exports[`workers/repository/update/branch/get-updated getUpdatedPackageFiles() bumps versions in updateDependency managers 1`] = `
{
  "artifactErrors": [],
  "reuseExistingBranch": undefined,
  "updatedArtifacts": [],
  "updatedPackageFiles": [
    {
      "contents": "new version",
      "path": "package.json",
      "type": "addition",
    },
  ],
}
`;

exports[`workers/repository/update/branch/get-updated getUpdatedPackageFiles() handles autoreplace base updated 1`] = `
{
  "artifactErrors": [],
  "reuseExistingBranch": undefined,
  "updatedArtifacts": [],
  "updatedPackageFiles": [
    {
      "contents": "updated-file",
      "path": "index.html",
      "type": "addition",
    },
  ],
}
`;

exports[`workers/repository/update/branch/get-updated getUpdatedPackageFiles() handles autoreplace branch needs update 1`] = `
{
  "artifactErrors": [],
  "reuseExistingBranch": false,
  "updatedArtifacts": [],
  "updatedPackageFiles": [
    {
      "contents": "updated-file",
      "path": "index.html",
      "type": "addition",
    },
  ],
}
`;

exports[`workers/repository/update/branch/get-updated getUpdatedPackageFiles() handles content change 1`] = `
{
  "artifactErrors": [],
  "reuseExistingBranch": false,
  "updatedArtifacts": [],
  "updatedPackageFiles": [
    {
      "contents": "some new content",
      "path": "package.json",
      "type": "addition",
    },
  ],
}
`;

exports[`workers/repository/update/branch/get-updated getUpdatedPackageFiles() handles git submodules 1`] = `
{
  "artifactErrors": [],
  "reuseExistingBranch": undefined,
  "updatedArtifacts": [],
  "updatedPackageFiles": [
    {
      "contents": "existing content",
      "path": ".gitmodules",
      "type": "addition",
    },
  ],
}
`;

exports[`workers/repository/update/branch/get-updated getUpdatedPackageFiles() handles isRemediation rebase 1`] = `
{
  "artifactErrors": [],
  "reuseExistingBranch": false,
  "updatedArtifacts": [],
  "updatedPackageFiles": [
    {
      "contents": "new contents",
      "path": "package-lock.json",
      "type": "addition",
    },
  ],
}
`;

exports[`workers/repository/update/branch/get-updated getUpdatedPackageFiles() handles isRemediation success 1`] = `
{
  "artifactErrors": [],
  "reuseExistingBranch": undefined,
  "updatedArtifacts": [],
  "updatedPackageFiles": [
    {
      "contents": "new contents",
      "path": "package-lock.json",
      "type": "addition",
    },
  ],
}
`;

exports[`workers/repository/update/branch/get-updated getUpdatedPackageFiles() handles lock file errors 1`] = `
{
  "artifactErrors": [
    {
      "lockFile": "composer.lock",
      "stderr": "some error",
    },
  ],
  "reuseExistingBranch": true,
  "updatedArtifacts": [],
  "updatedPackageFiles": [
    {
      "contents": "some new content",
      "path": "undefined",
      "type": "addition",
    },
  ],
}
`;

exports[`workers/repository/update/branch/get-updated getUpdatedPackageFiles() handles lock files 1`] = `
{
  "artifactErrors": [],
  "reuseExistingBranch": true,
  "updatedArtifacts": [
    {
      "contents": "some contents",
      "path": "composer.json",
      "type": "addition",
    },
  ],
  "updatedPackageFiles": [
    {
      "contents": "some new content",
      "path": "composer.json",
      "type": "addition",
    },
  ],
}
`;

exports[`workers/repository/update/branch/get-updated getUpdatedPackageFiles() handles lockFileMaintenance 1`] = `
{
  "artifactErrors": [],
  "reuseExistingBranch": undefined,
  "updatedArtifacts": [
    {
      "contents": "some contents",
      "path": "composer.json",
      "type": "addition",
    },
  ],
  "updatedPackageFiles": [],
}
`;

exports[`workers/repository/update/branch/get-updated getUpdatedPackageFiles() handles lockFileMaintenance error 1`] = `
{
  "artifactErrors": [
    {
      "lockFile": "composer.lock",
      "stderr": "some error",
    },
  ],
  "reuseExistingBranch": undefined,
  "updatedArtifacts": [],
  "updatedPackageFiles": [],
}
`;

exports[`workers/repository/update/branch/get-updated getUpdatedPackageFiles() update artifacts on update-lockfile strategy 1`] = `
{
  "artifactErrors": [],
  "reuseExistingBranch": undefined,
  "updatedArtifacts": [
    {
      "contents": "some contents",
      "path": "composer.lock",
      "type": "addition",
    },
  ],
  "updatedPackageFiles": [
    {
      "contents": "existing content",
      "path": "composer.json",
      "type": "addition",
    },
  ],
}
`;

exports[`workers/repository/update/branch/get-updated getUpdatedPackageFiles() update artifacts on update-lockfile strategy with no updateLockedDependency 1`] = `
{
  "artifactErrors": [],
  "reuseExistingBranch": undefined,
  "updatedArtifacts": [
    {
      "contents": "some contents",
      "path": "terraform.lock",
      "type": "addition",
    },
  ],
  "updatedPackageFiles": [
    {
      "contents": "existing content",
      "path": "abc.tf",
      "type": "addition",
    },
  ],
}
`;
